failures/clang_other_error_V26Jyk.i.stderr.txt
libsystemd-id128.c:1:43: error: expected ')'
obsolete_lib(sd_id128_to_string,libsystemd-id128);
                                          ^
libsystemd-id128.c:1:13: note: to match this '('
obsolete_lib(sd_id128_to_string,libsystemd-id128);
            ^
libsystemd-id128.c:1:14: error: a parameter list without types is only allowed in a function definition
obsolete_lib(sd_id128_to_string,libsystemd-id128);
             ^
libsystemd-id128.c:2:45: error: expected ')'
obsolete_lib(sd_id128_from_string,libsystemd-id128);
                                            ^
libsystemd-id128.c:2:13: note: to match this '('
obsolete_lib(sd_id128_from_string,libsystemd-id128);
            ^
libsystemd-id128.c:2:14: error: a parameter list without types is only allowed in a function definition
obsolete_lib(sd_id128_from_string,libsystemd-id128);
             ^
libsystemd-id128.c:3:43: error: expected ')'
obsolete_lib(sd_id128_randomize,libsystemd-id128);
                                          ^
libsystemd-id128.c:3:13: note: to match this '('
obsolete_lib(sd_id128_randomize,libsystemd-id128);
            ^
libsystemd-id128.c:3:14: error: a parameter list without types is only allowed in a function definition
obsolete_lib(sd_id128_randomize,libsystemd-id128);
             ^
libsystemd-id128.c:4:45: error: expected ')'
obsolete_lib(sd_id128_get_machine,libsystemd-id128);
                                            ^
libsystemd-id128.c:4:13: note: to match this '('
obsolete_lib(sd_id128_get_machine,libsystemd-id128);
            ^
libsystemd-id128.c:4:14: error: a parameter list without types is only allowed in a function definition
obsolete_lib(sd_id128_get_machine,libsystemd-id128);
             ^
libsystemd-id128.c:5:42: error: expected ')'
obsolete_lib(sd_id128_get_boot,libsystemd-id128);
                                         ^
libsystemd-id128.c:5:13: note: to match this '('
obsolete_lib(sd_id128_get_boot,libsystemd-id128);
            ^
libsystemd-id128.c:5:14: error: a parameter list without types is only allowed in a function definition
obsolete_lib(sd_id128_get_boot,libsystemd-id128);
             ^
10 errors generated.
